# scbench

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: CLI_USAGE.md  adding_evals.md  specification.md
evals/: manifest.json
evals/cell_typing/: T04a_endothelin_niche_sources.json
evals/clustering/: tapestri_ccus_clustering_12_largest_mutant_clone.json
evals/differential_expression/: DE01_pseudobulk_de.json
evals/dimensionality_reduction/: dr_05_pca_preprocessing_sentinels.json
evals/normalization/: NRM01_sparse_normalization.json
evals/qc/: bd_rhapsody_tnbc_panel_aware_qc.json
evals_canonical/: manifest.json
evals_canonical/illumina/: illumina_dimred_choose_batch_key.json  illumina_qc_report_initial_nuclei.json
examples/: README.md
examples/by_outcome/common_failures/: README.md
examples/by_outcome/edge_cases/: README.md
examples/by_task/cell_typing/: chromium_celltyping_01_4t1_compartment_fractions.json  csgenetics_celltyping_major_immune_lineages.json  illumina_celltyping_major_cell_types.json  missionbio_celltyping_present_cell_types.json  parsebio_celltyping_coarse_distribution.json
examples/by_task/clustering/: chromium_clustering_01_4t1_pericyte_adjacent_to_caf.json  csgenetics_clustering_avg_purity.json  illumina_clustering_leiden_n_clusters.json  missionbio_clustering_n_clusters.json  parsebio_clustering_celltype_purity.json
examples/by_task/differential_expression/: chromium_de_01_contractile_caf_marker_recovery.json  csgenetics_de_monocyte_pseudobulk.json  illumina_de_edn1_maximal.json  missionbio_de_mutation_frequency.json  parsebio_de_ifnb_cd14mono_markers.json
examples/by_task/dimensionality_reduction/: chromium_4t1_hvg_gene_sets.json  csgenetics_pca_pc1_biological_axis.json  illumina_dimred_choose_batch_key.json  missionbio_dimred_normalization_choice.json  parsebio_pca_pc1_primary_driver.json
examples/by_task/normalization/: chromium_4t1_normalization.json  csgenetics_normalization_full_pipeline.json  illumina_normalization_cp10k_log1p.json  missionbio_normalization_protein_integrity.json  parsebio_normalization_edge_decision.json
examples/by_task/qc/: chromium_qc_4t1_filter_cells.json  csgenetics_qc_filtering.json  illumina_qc_report_initial_nuclei.json  missionbio_qc_variant_call_rate.json
examples/by_task/trajectory_analysis/: chromium_trajectory_01_caf_terminal_marker_recovery.json
paper/: generate_figures.py  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
results/: benchmark_results.json  benchmark_results_claudecode.json  category_results.json  model_results.csv  model_steps.csv  platform_results.json  raw_data_tables.md  results_by_platform.json  results_by_platform_claudecode.json  results_by_task.json  results_by_task_claudecode.json
scbench/: __init__.py  cli.py  types.py
scbench/harness/: __init__.py  claudecode.py  runner.py  utils.py
scripts/: benchmark_models.sh  compare_models.py  compute_results.py  generate_figures.py
trajectories/DE01_pseudobulk_de/anthropic/claude-opus-4-5/mini-swe-agent/r1/: result.json  trajectory.json
(+725 files in other folders)
