[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scbench"
version = "0.1.0"
description = "A benchmark for AI agents on single-cell RNA-seq analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Latch Bio", email = "kenny@latch.bio"}
]
keywords = ["single-cell", "scRNA-seq", "benchmark", "LLM", "AI agents", "biology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "mini-swe-agent",
    "eval-graders @ git+ssh://git@github.com/latchbio/eval-graders.git@d2214e4",
]

[project.optional-dependencies]
plotsagent = [
    "latch-plots-eval-harness @ git+ssh://git@github.com/latchbio/latch-plots-eval-harness.git@302134c",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
scbench = "scbench.cli:main"

[tool.setuptools.packages.find]
include = ["scbench*"]

[project.urls]
Homepage = "https://github.com/latchbio/scbench"
Documentation = "https://github.com/latchbio/scbench/tree/main/docs"
Repository = "https://github.com/latchbio/scbench"
